syntax = "proto3";

package unitdb;

option go_package='.;unitdb';

// Query interface
service Query {
rpc Start (ConnInfo) returns (ConnInfo){}

rpc Stream (stream Packet) returns (stream Packet);

rpc Stop (Empty) returns (Empty){}
}

message Empty {
}

message Packet {
bytes data=1;
}

message ConnInfo {
string client_id=1;
string network=2;
string address=3;
}

message InMsg {
	oneof Message {
		QueryRequest query = 1;
	}
}

message OutMsg {
	oneof Message {
		QueryResponse resp = 1;
	}
}

enum MessageType {
	RESERVED=0;
	CONNECT=1;
	CONNACK=2;
    QUERY=3;
    RESULT=4;
	PINGREQ=5;
	PINGRESP=6;
	DISCONNECT=7;
}

message FixedHeader {
	MessageType messageType = 1;
	int32 remainingLength=5;
}

// Connect represents a connect packet.
message Conn {
	string protoName=1;
	int32 version=2;
	bool insecureFlag=3;
	bool usernameFlag=4;
	bool passwordFlag=5;
	int32 keepAlive=6;
	string clientID=7;
	string username=8;
	string password=9;
}

// Connack represents a connack packet.
// 0x00 connection accepted
// 0x01 refused: unacceptable proto version
// 0x02 refused: identifier rejected
// 0x03 refused server unavailiable
// 0x04 bad user or password
// 0x05 not authorized
message Connack {
	int32 returnCode=1;
	int32 connID=2;
}

//Pingreq is a keepalive
message Pingreq {
}

//Pingresp is for saying "hey, the server is alive"
message Pingresp {
}

//Disconnect is to signal you want to cease communications with the server
message Disconnect {
	int32 messageID=1;
}

// QueryRequest represents a query packet.
message QueryRequest {
	int32 messageID=1;
	string topic=2;
}

// Result is pairing the topic and the results together.
message Result {
	string topic=1;
	repeated string res=2;
}

// QueryResponse is sent to return the result of query
message QueryResponse {
	int32 messageID=1;
	repeated Result results=2;
    string error=3;
}